# tindex

./: .gitignore  Cargo.toml  README.md
benches/: intersect.rs
examples/: intersect.rs  query.rs
src/: clickhouse.rs  config.rs  encoding.rs  grammar.pest  indexer.rs  lib.rs  main.rs  mysql.rs  query.rs  serve.rs
src/cli/: indexer.rs  mod.rs  query.rs  serve.rs
tindex-core/: Cargo.toml
tindex-core/benches/: cache.rs  intersect.rs  simple.rs
tindex-core/src/: encoding.rs  lib.rs
tindex-web/: Cargo.toml
tindex-web/src/: main.rs  query.rs
tindex-web/src/cli/: indexer.rs  query.rs  serve.rs
