[package]
edition = "2021"
name = "auditorium"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "3.2", features = ["derive"]}
dotenv = "0.15"
futures = "0.3"
pest = "2.1"
pest_derive = "2.1"
rocket = "0.5.0-rc.2"
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "mysql"]}
tempfile = "3.3"
thiserror = "1.0"
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "intersect"
