[package]
edition = "2021"
name = "auditorium"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
clap = {version = "3.2", features = ["derive"]}
cron = "0.11.0"
dotenv = "0.15"
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.17"
pest = "2.1"
pest_derive = "2.1"
rocket = "0.5.0-rc.2"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "mysql"]}
tempfile = "3.3"
thiserror = "1.0"
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "intersect"

[profile.release]
lto = true
