[package]
edition = "2021"
name = "tindex-core"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
log = "0.4.17"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"
tempfile = "3.3"

[[bench]]
harness = false
name = "intersect"

[[bench]]
harness = false
name = "simple"
